--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -10,10 +10,16 @@ body {
 
 h1, p {
     text-align: center;
+    margin: 10px;
 }
 
 header {
     background-color: rgb(60, 50, 128);
     color: white;
     padding: 74px;
+}
+
+main {
+    height: 600px;
+    background-color: rgb(196, 177, 240);
 }
