--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -2,24 +2,47 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    line-height: 2;
 }
 
-h1, p {
-    text-align: center;
-    margin: 10px;
-}
 
 header {
-    background-color: rgb(60, 50, 128);
+    background-color: rgb(67, 57, 136);
     color: white;
-    padding: 74px;
+    padding: 73px;
+    text-align: center;
 }
 
 main {
-    height: 600px;
-    background-color: rgb(196, 177, 240);
+    background-color: rgb(221, 213, 241);
+    flex: 1;
+    padding: 48px 38px;
+}
+
+#sobre-mim {
+    display: block;
+    background-color: white;
+    width: 80%;
+    margin: 0 auto;
+    padding: 40px;
+    border-radius: 12px;
+}
+
+#titulo-sobre-mim {
+    font-size: 30px;
+    margin-bottom: 16px;
+    border-bottom: 2px solid rgb(96, 67, 175);
+    margin-bottom: 25px;
+}
+
+.texto-sobre-mim {
+    font-size: 20px;
 }
