--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Nata+Sans:wght@100..900&display=swap');
+
 /*  Reset do css */
 * {
     margin: 0;
@@ -6,7 +8,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lora, Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -51,14 +53,14 @@ main {
 #meus-hobbies {
     background-color: white;
     width: 80%;
-    margin-bottom: 16px;
     padding: 40px;
     margin: 0 auto;
     border-radius: 12px;
+    margin-bottom: 40px;
 }
 
 #titulo-meus-hobbies {
-    font-size: 40px;
+    font-size: 30px;
     margin-bottom: 16px;
 }
 
@@ -79,7 +81,45 @@ li {
 }
 
 li:hover {
-    background-color: rgb(164, 81, 197);
-    transform- translateX(5px);
+    background-color: rgb(205, 140, 223);
+    transform: translateX(5px);
     transition: all 0.3s ease;
+}
+
+#contato  { 
+background-color: white;
+width: 80%;
+margin-bottom: 16px;
+padding: 40px;
+margin: 0 auto;
+border-radius: 12px;
+}
+
+#contato h3 {
+    margin-bottom: 10px;
+    font-size: 15;
+    text-align: center;
+}
+
+#contato p {
+    font-size: 15px;
+    text-align: center;
+}
+
+#contato a {
+    color: blueviolet;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    margin: 0 0.5rem;
+    border: 2px solid blueviolet;
+    border-radius: 25px;
+    display: inline-block;
+    transition: all 0.3s ease;
+}
+
+#contato a:hover{
+    background-color: rgb(205, 158, 248);
+    color: rgb(132, 43, 216);
+    transform: translateX(-2px);
 }
